--- a/public/chat.html
+++ b/public/chat.html
@@ -47,6 +47,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
+
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
